feat: methodInvoke